<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.plataformaam.mobile.clientefinal.UserLoginUI"
    android:background="@drawable/plano_fundo_jardim_penha">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/txtLoginUIAppName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/msgLoginGreeting"
        android:id="@+id/txtLoginUIGreeting"
        android:layout_above="@+id/formContainerUserLoginUI"
        android:layout_centerHorizontal="true"
        />

    <RelativeLayout
        android:id="@+id/formContainerUserLoginUI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/form_box_layout_bg">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etxLoginUserLoginUI"
            android:hint="@string/lblLogin" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"

            android:id="@+id/etxPasswordUserLoginUI"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/lblPassword"
            android:layout_below="@+id/etxLoginUserLoginUI"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDoLogin"
            android:hint="@string/btnDoLogin"

            android:id="@+id/btnLoginUserLoginUI"
            android:layout_gravity="right"

            android:layout_below="@+id/etxPasswordUserLoginUI"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="doLogin"

            style="@style/btn_primary"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/msgLoginRegisterOption"
        android:id="@+id/txtLoginUIRegisterOption"
        android:layout_above="@+id/btnGoToCreateNewUser"
        android:layout_alignLeft="@+id/txtLoginUIGreeting"
        android:layout_alignStart="@+id/txtLoginUIGreeting" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDoRegister"
        android:id="@+id/btnGoToCreateNewUser"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/formContainerUserLoginUI"
        android:layout_alignEnd="@+id/formContainerUserLoginUI"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="goCreateNewUser"
        style="@style/btn_danger"
        />

</RelativeLayout>
