<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.plataformaam.mobile.clientefinal.userinterfaces.RegisterUserUI"
    android:background="@drawable/plano_fundo_jardim_penha"

    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Novo Usuário !"
        android:id="@+id/lblRegisterNewUser"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:id="@+id/formContainerRegisterUserUI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/form_box_layout_bg"
        android:padding="2.0sp"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etxNameRegisterUserUI"
            android:inputType="text"
            android:hint="@string/hntName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etxLoginRegisterUser"
            android:layout_below="@+id/etxNameRegisterUserUI"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/hntLogin" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etxPasswordRegisterUserUI"
            android:layout_below="@+id/etxLoginRegisterUser"
            android:layout_centerHorizontal="true"
            android:hint="@string/hntPassword" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/etxEmailRegisterUser"
            android:layout_below="@+id/etxPasswordRegisterUserUI"
            android:layout_alignLeft="@+id/etxPasswordRegisterUserUI"
            android:layout_alignStart="@+id/etxPasswordRegisterUserUI"
            android:hint="@string/hntEmail" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnDoRegister"
            android:id="@+id/btnRegisterNewUser"
            android:layout_below="@+id/etxEmailRegisterUser"
            android:layout_centerHorizontal="true"
            android:onClick="saveNewUser"
            style="@style/btn_primary"
            />

    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnBack"

        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="goToLogin"
        style="@style/btn_danger"

        />

</RelativeLayout>
