<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.plataformaam.mobile.clientefinal.CreateUpiUI$PlaceholderFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblUPITitle"
        android:id="@+id/lblTitleCreateNewUPIText"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etxCreateUPIText"
        android:layout_below="@+id/lblTitleCreateNewUPIText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/hntUPITitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/lblContentCreateNewUPIText"
        android:layout_below="@+id/etxCreateUPIText"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/etxCreateUPIText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/etxContentCreateNewUPIText"
        android:layout_below="@+id/lblContentCreateNewUPIText"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/lblContentCreateNewUPIText"
        android:layout_above="@+id/btnCreateNewUPIText"
        android:hint="@string/hntUPIContent"
        android:gravity="top" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSave"
        android:id="@+id/btnCreateNewUPIText"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
