<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.plataformaam.mobile.clientefinal.LogoutUI"
    android:background="@drawable/plano_fundo_rj_baia_guanabara"
    >

    <RelativeLayout
        android:background="@drawable/form_box_layout_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/msgLogoutWarningInfo"
            android:id="@+id/txtInfoLogout"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnBack"
            android:id="@+id/btnLogoutUIBack"
            android:layout_below="@+id/txtInfoLogout"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:onClick="goBack"
            style="@style/btn_primary"
            />
    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDoLogout"
        android:id="@+id/btnDoLogout"
        android:layout_alignParentBottom="true"
        android:onClick="doLogout"
        android:background="#99EE9999"
        android:layout_alignEnd="@+id/relativeLayout"
        android:layout_alignParentStart="true"
        style="@style/btn_danger"
        />
</RelativeLayout>
